--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16068,7 +16068,7 @@
 "~^/.*/Drug-heuristics$" "/drug-heuristics";
 "~^/doc/rotten.com/library/bio/crime/criminals/aryan-republican-army/index$" "/doc/rotten.com/library/bio/crime/criminals/aryan-republican-army/index.html";
 "~^/doc/p.*/sociology/1987-rossi$" "/doc/sociology/1987-rossi";
-"~^/doc/iq/github-markdown-css$" "https://github.com/sindresorhus/github-markdown-css";
+"~^/.*github-markdown-css.*$" "https://github.com/sindresorhus/github-markdown-css";
 "~^/doc/iq/2007-usnationalintelligencesurvey-.*$" "/doc/iq/index";
 "~^/doc/history/1970-bush-piecesofthraction\.pdf.*$" "/doc/history/1970-bush-piecesoftheaction.pdf";
 "~^/doc/economics/advertising/%C3%83%C2%B0$" "/doc/economics/advertising/index";
@@ -16160,6 +16160,106 @@
 "~^/supplements$" "/nootropic/nootropic";
 "~^/semicon.yju.ac.kr/index.php%3Fmid=board_OyMr26&document_srl=5403.*$" "https://semicon.yju.ac.kr/index.php%3Fmid=board_OyMr26&document_srl=5403";
 "~^/saebomdent.co.kr/bbs/board.php%3Fbo_table=free&wr_id=160611.*$" "https://saebomdent.co.kr/bbs/board.php%3Fbo_table=free&wr_id=160611";
+"~^/doc/japan/.*/2011-davis$" "/doc/bitcoin/2011-davis";
+"~^/doc/iq/high/%EF%BF.*$" "/doc/iq/high/index";
+"~^/doc/iodine/1972-fierro-ben%FF%FFtez\.pdf.*$" "/doc/iodine/1972-fierrobenitez.pdf";
+"~^/doc/history/%C3%83%E2%80%9A%C3%82%C2%BF$" "/doc/history/index";
+"~^/doc/.*/hpmor$" "/hpmor";
+"~^/doc/genetics/heritable/1965-scott-genetic$" "/doc/genetics/heritable/dog/1965-scott-geneticsandthesocialbehaviorofthedog.pdf";
+"~^/doc/cs/hardware/2020-troise.pdf%EF%BB%BF.*$" "/doc/cs/hardware/2020-troise.pdf";
+"~^/doc/cat/catnip/survey/2017-%EF%BF%BD$" "/doc/cat/psychology/drug/catnip/survey/index";
+"~^/doc/cat/catnip/index$" "/doc/cat/psychology/drug/catnip/index";
+"~^/doc/anime/eva/2010-crc&.*$" "/doc/anime/eva/2010-crc";
+"~^/doc/ai/nn/transformer/gpt/codex/2024-harding$" "/doc/ai/nn/transformer/gpt/codex/2024-harding.pdf";
+"~^/Color_space$" "https://en.wikipedia.org/wiki/Color_space";
+"~^/Dabooru2020$" "/Danbooru2021#danbooru2020";
+"~^/Choosing-Shoftware$" "/choosing-software";
+"~^/Complex$" "/complexity";
+"~^/doc/ai/1962B.C$" "/doc/ai/1962-bryson.pdf";
+"~^/doc/ai/nn/gan/stylegan/thiswaifudoesnotexist.png$" "/doc/ai/nn/gan/stylegan/anime/thiswaifudoesnotexist.png";
+"~^/doc/anime/eva/little$" "/doc/anime/eva/little-boy/index";
+"~^/doc/borges/1936borges-ahistoryofeternity\.pdf.*$" "/doc/borges/1936-borges-ahistoryofeternity.pdf";
+"~^/doc/borges/1947-borges-anewrefutationo$" "/doc/borges/1947-borges-anewrefutationoftime.pdf";
+"~^/doc/sr/2019-04-22frenchdarknetdeepdotweb-dnmlist.html$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/sr/2013van-hout-2\.pdf.*$" "/doc/darknet-markets/2013-van-hout-2.pdf";
+"~^/doc/sr/2019-04-22-deepdotweb-dnmlist.h$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/.../gen.../heritable/2021-fagereng\.pdf.*$" "/doc/genetics/heritable/adoption/2021-fagereng.pdf";
+"~^/doc/genetics/heritable/2009-loelin\.pdf.*$" "/doc/genetics/heritable/adoption/2021-loehlin.pdf";
+"~^/doc/psychology/2017-kirschne\.pdf.*$" "/doc/psychology/2017-kirschner.pdf";
+"~^/doc/psychology/rss$" "/doc/psychology/index";
+"~^/doc/psychology/2006-%C3%B0$" "/doc/psychology/index";
+"~^/doc/rotten.com/library/bio/entertainers/actors/brad-pitt/statistics/order/beanmachine-multistage/index.html$" "/doc/statistics/order/beanmachine-multistage/index.html";
+"~^/note/Ramsey/index.html$" "/note/ramsey";
+"~^/haskell/Run-Length-Encoding/index.html$" "/haskell/run-length-encoding";
+"~^/Epigrams2$" "/epigrams";
+"~^/lsd-microdosinga$" "/lsd-microdosing";
+"~^/notesMisc$" "/note/note";
+"~^/fork$" "/co2-coin";
+"~^/hakyll-2.hs$" "/static/build/hakyll.hs";
+"~^/doc/economics/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/fiction/science-fiction/1984-lem.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/static/img/icon/triple-question-mark.svg$" "/static/img/triple-question-mark.svg";
+"~^/turingcomplete$" "/turing-complete";
+"~^/Screwflyf.*$" "/screwfly";
+"~^/note/www.usfoods.*$" "/note/note";
+"~^/nootropic/nicotine$" "/nicotine";
+"~^/tool-ai-agent-ai$" "/tool-ai";
+"~^/static/404.page$" "/static/404.md";
+"~^/.*/Spaced-repeti.*$" "/spaced-repetition";
+"~^/newsletter/2021/03.page.html$" "/newsletter/2021/03.md.html";
+"~^/Lifelogging.html$" "/lifelogging";
+"~^/doc/r.*/1985-hofstadter$" "/1985-hofstadter";
+"~^/doc/psychology/personality/psychopathy/1941-cleckley-maskofsanity$" "/doc/psychology/personality/psychopathy/1941-cleckley-maskofsanity.pdf";
+"~^/doc/psychology/okcupid/howyourraceaffectstheme$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/.*/FMP-parody$" "/fmp-parody";
+"~^/doc/iq/2014-hyde.pdfme.*$" "/doc/iq/2014-hyde.pdf";
+"~^/doc/genetics/selection/rss2.0.xml$" "https://gwern.substack.com/feed";
+"~^/doc/genetics/selection/atom.xml$" "https://gwern.substack.com/feed";
+"~^/doc/genetics/heritable/correlation/2002-nadder\.pdf.*$" "/doc/genetics/heritable/correlation/2002-madden.pdf";
+"~^/doc/fiction/2015-mirante-thesubcreationtheoryof$" "/doc/fiction/science-fiction/2015-mirante-thesubcreationtheoryofjrrtolkien.html";
+"~^/doc/darknet-market/TFW.*$" "/doc/darknet-market/index";
+"~^/doc/culture/2012-russell$" "/doc/culture/2012-russell.pdf";
+"~^/doc/cs/algorithm/ai/scaling/economics/index$" "/doc/ai/scaling/economics/index";
+"~^/doc/cs/algorithm/ai/fiction/index$" "/doc/ai/fiction/index";
+"~^/doc/cs/algorithm/ai/diffusion/discrete/index$" "/doc/ai/nn/diffusion/discrete/index";
+"~^/doc/anime/eva/1996-animeri$" "/doc/anime/eva/1996-animerica-conscience";
+"~^/doc/anime/1978\.\.\.*$" "/doc/anime/1978-nosaka.pdf";
+"~^/doc/ai/2003-11-07clayshirky-thesemanticwebsyllogismandworldview.html$" "/doc/ai/2003-11-07-clayshirky-thesemanticwebsyllogismandworldview.html";
+"~^/doc/2011-june-mulberry-full-side.jpg$" "/doc/personal/mulberry-tree/2011-gwern-june-full-side.jpg";
+"~^/DNM-arrests&gt.*$" "/dnm-arrests";
+"~^/DNB-meta-analysis.*" "/dnb-meta-analysis";
+"~^/conversation/john_brockman-daniel_kahneman-elaine_pagels-michael_gazzaniga-martin_nowak-leda$" "https://www.edge.org/conversation/john_brockman-daniel_kahneman-elaine_pagels-michael_gazzaniga-martin_nowak-leda";
+"~^/Danboru2020$" "/danbooru#danbooru2020";
+"~^/Changelog-RSS$" "/changelog";
+"~^/doc/ai/nn/-transformer/gpt/2019-radford\.pdf.*$" "/doc/ai/nn/transformer/gpt/2/2019-radford.pdf";
+"~^/doc/ai/poetry/2019-07-21-taotehching-all-11$" "/doc/ai/poetry/2019-07-21-taotehching-all-1ksamples.txt";
+"~^/doc/anime/eva/1996-newtype-anno-in$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/cs/2011-08-14-williamyu-mentalrngs.htm$" "/doc/cs/cryptography/2011-08-14-williamyu-mentalrngs.html";
+"~^/doc/darknet-market/2011-08-1$" "/doc/darknet-market/2011-07-11-hedgedescrow.mht";
+"~^/doc/darknet-market/2013-11-0$" "/doc/darknet-market/index";
+"~^/doc/economics/advertising/2019-04-07-648$" "/doc/economics/advertising/index";
+"~^/doc/economics/automation/%C2%BF$" "/doc/economics/automation/index";
+"~^/doc/2005-goldberg\.pdf.*$" "/doc/nicotine/2005-goldberg.pdf";
+"~^/doc/nootropics/2010-nehlig$" "/doc/nootropic/2010-nehlig.pdf";
+"~^/doc/philosophy/epistemology/2010-414$" "/doc/philosophy/epistemology/index";
+"~^/doc/2012-mannes\.pdf.*$" "/doc/psychology/2012-mannes.pdf";
+"~^/doc/psychology/okcupid/howyourraceaffectsthemassagesyouget.html$" "/doc/psychology/okcupid/samesexdataforracevsreplyrates.html";
+"~^/radiance$" "/doc/radiance/2002-scholz-radiance";
+"~^/doc/reinforcement-learning/alphago$" "/doc/reinforcement-learning/alphago/index";
+"~^/doc/reinforcement-learning/model-free/1963-mi$" "/doc/reinforcement-learning/model-free/1963-michie.pdf";
+"~^/Nootropics/index.html$" "/nootropic/index";
+"~^/Wikipedia-and-Dark-Side-Editing/index.html$" "/wikipedia-and-dark-side-editing";
+"~^/komm-susser-tod/index.html$" "/komm-susser-tod";
+"~^/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-2\.pdf.*$" "/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications-1.pdf";
+"~^/doc/reinforcement-learning/imitation-learning/brain-imitation-learning/www/arxiv.org/fccf70ee65689ba812550f2be27b53521567e6e3\.pdf.*$" "/doc/www/arxiv.org/fccf70ee65689ba812550f2be27b53521567e6e3.pdf";
+"~^/hces.*$" "/face";
+"~^/Improve$" "/improvement";
+"~^/indexRo.*$" "/index";
+"~^/doxings$" "/blackmail";
+"~^/newsletter/2012/13$" "/newsletter/2012/index";
+"~^/Reserach-criticism$" "/research-criticism";
+"~^/static/font/dropcap/dropcat/light/I-1.svg$" "/static/font/dropcap/dropcat/light/I-light-1.svg";
+"~^/newsletter/static/font/SourceSerifPro-BASIC-Semibold.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-Semibold.ttf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
