--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11248,3 +11248,6 @@ default "";
 "~^/2013-memotrainerrr.png.*$" "/doc/psychology/spaced-repetition/2013-memotrainerrr.png";
 "~^/doc/statistics/survival-analysis/2013-gajendragadkar-figure1-survivalcurveofchocolateinhospitaloverminutes.jpg.*$" "/doc/statistics/survival-analysis/2013-gajendragadkar-figure1-survivalcurveofchocolateinhospitaloverminutes.png";
 "~^/doc/politics/2010-anderson.pdf.*$" "/doc/politics/2010-anderson-2.pdf";
+"~^/doc/ai/nn/dynamic-evaluation/2023-hardt-figure8-bitesperbyteforgptneo.png.*$" "/doc/ai/nn/dynamic-evaluation/2023-hardt-figure8-bitesperbyteforgptneo.jpg";
+"~^/doc/ai/nn/fully-connected/2023-bachmann-figure7-suprachinchilladatascalingformlpsoncifar100loss.png.*$" "/doc/ai/nn/fully-connected/2023-bachmann-figure7-suprachinchilladatascalingformlpsoncifar100loss.jpg";
+"~^/doc/ai/nn/transformer/gpt/fiction/2021-davis.pdf.*$" "/doc/ai/nn/transformer/gpt/2/fiction/2021-davis.pdf";
