--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11251,3 +11251,5 @@ default "";
 "~^/doc/ai/nn/dynamic-evaluation/2023-hardt-figure8-bitesperbyteforgptneo.png.*$" "/doc/ai/nn/dynamic-evaluation/2023-hardt-figure8-bitesperbyteforgptneo.jpg";
 "~^/doc/ai/nn/fully-connected/2023-bachmann-figure7-suprachinchilladatascalingformlpsoncifar100loss.png.*$" "/doc/ai/nn/fully-connected/2023-bachmann-figure7-suprachinchilladatascalingformlpsoncifar100loss.jpg";
 "~^/doc/ai/nn/transformer/gpt/fiction/2021-davis.pdf.*$" "/doc/ai/nn/transformer/gpt/2/fiction/2021-davis.pdf";
+"~^/doc/cs/2010-nordhaus-nordhaus2007twocenturiesofproductivitygrowthincomputing-appendix.xlsx.*$" "/doc/cs/hardware/2010-nordhaus-nordhaus2007twocenturiesofproductivitygrowthincomputing-appendix.xlsx";
+"~^/doc/psychiatry/autism/2020-taylor.pdf.*$" "/doc/psychiatry/autism/2020-taylor-2.pdf";
