--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11269,3 +11269,6 @@ default "";
 "~^/doc/design/typography/floral/2024-02-15-gwern-midjourneyv5-magnetictree-floraldecorations-samples-light.jpg.*$" "/doc/design/typography/floral/2024-02-15-gwern-midjourneyv6-magnetictree-floraldecorations-samples-light.jpg";
 "~^/doc/design/typography/floral/2024-02-15-gwern-midjourneyv6-magnetictree-floraloranments-flowers-black-02.jpg.*$" "/doc/design/typography/floral/2024-02-15-gwern-midjourneyv6-magnetictree-floralornaments-flowers-black-02.jpg";
 "~^/doc/design/typography/floral/2024-02-15-gwern-midjourneyv6-magnetictree-floraloranments-flowers-black-01.jpg.*$" "/doc/design/typography/floral/2024-02-15-gwern-midjourneyv6-magnetictree-floralornaments-flowers-black-01.jpg";
+"~^/doc/psychology/1998-persinger.pdf.*$" "/doc/psychology/vision/1998-persinger.pdf";
+"~^/doc/psychology/1998-feist.pdf.*$" "/doc/psychology/personality/1998-feist.pdf";
+"~^/doc/psychology/2004-becker.pdf.*$" "/doc/psychiatry/2004-becker.pdf";
