--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11272,3 +11272,6 @@ default "";
 "~^/doc/psychology/1998-persinger.pdf.*$" "/doc/psychology/vision/1998-persinger.pdf";
 "~^/doc/psychology/1998-feist.pdf.*$" "/doc/psychology/personality/1998-feist.pdf";
 "~^/doc/psychology/2004-becker.pdf.*$" "/doc/psychiatry/2004-becker.pdf";
+"~^/doc/psychology/1990-zutell-literacytheoryandresearch39thnationalreadingconference.pdf.*$" "/doc/psychology/linguistics/1990-zutell-literacytheoryandresearch39thnationalreadingconference.pdf";
+"~^/doc/ai/nn/transformer/gpt/poetry/2020-zitelli.pdf.*$" "/doc/ai/nn/transformer/gpt/2/poetry/2020-zitelli.pdf";
+"~^/doc/dual-n-back/2010-zhang.pdf.*$" "/doc/statistics/bias/2010-zhang.pdf";
