+misc bugfixes noted reviewing new /newest

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11275,3 +11275,5 @@ default "";
 "~^/doc/psychology/1990-zutell-literacytheoryandresearch39thnationalreadingconference.pdf.*$" "/doc/psychology/linguistics/1990-zutell-literacytheoryandresearch39thnationalreadingconference.pdf";
 "~^/doc/ai/nn/transformer/gpt/poetry/2020-zitelli.pdf.*$" "/doc/ai/nn/transformer/gpt/2/poetry/2020-zitelli.pdf";
 "~^/doc/dual-n-back/2010-zhang.pdf.*$" "/doc/statistics/bias/2010-zhang.pdf";
+"~^/doc/psychology/collecting/2019-08-22-kevinlynagh-pricingnichproducts.html.*$" "/doc/psychology/collecting/2019-08-22-kevinlynagh-pricingnicheproducts.html";
+"~^/doc/cs/zend-manual-pdfmetadata.html.*$" "/doc/cs/2020-02-16-zend-manual-pdfmetadata.html";
