rm Arrow.hs: too redundant with the transclusion-required JS runtime implementation, and risks bugs

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11277,3 +11277,4 @@ default "";
 "~^/doc/dual-n-back/2010-zhang.pdf.*$" "/doc/statistics/bias/2010-zhang.pdf";
 "~^/doc/psychology/collecting/2019-08-22-kevinlynagh-pricingnichproducts.html.*$" "/doc/psychology/collecting/2019-08-22-kevinlynagh-pricingnicheproducts.html";
 "~^/doc/cs/zend-manual-pdfmetadata.html.*$" "/doc/cs/2020-02-16-zend-manual-pdfmetadata.html";
+"~^/static/build/[Aa]rrow\.hs.*$" "https://github.com/gwern/gwern.net/commit/28822b77f589c0b7cc9a68e8644a98c0e72ab56d";
