--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16260,6 +16260,75 @@
 "~^/Reserach-criticism$" "/research-criticism";
 "~^/static/font/dropcap/dropcat/light/I-1.svg$" "/static/font/dropcap/dropcat/light/I-light-1.svg";
 "~^/newsletter/static/font/SourceSerifPro-BASIC-Semibold.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-Semibold.ttf";
+"~^/fiction/men$" "/fiction/men-of-iron";
+"~^/secretsofsiliconvalley.org$" "https://secretsofsiliconvalley.org/";
+"~^/Scaling-hypothesis.*$" "/scaling-hypothesis";
+"~^/Ontological-pantheism.html$" "/ontological-pantheism";
+"~^/indexr98.*$" "/index";
+"~^/.*/application.TermsAndConditions.html$" "/static/404";
+"~^/doc/steamfree1.blogspot.com$" "/static/404";
+"~^/.*/blockedPage.css$" "/static/404";
+"~^/doc/statistics/2001-preston-dem$" "/doc/statistics/2001-preston-demography.pdf";
+"~^/doc/sr/sheep-20121203-profile-livefromsweden$" "/doc/darknet-market/sheep-marketplace/2012-12-03-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html";
+"~^/doc/sEG.*$" "/doc/index";
+"~^/doc/safety-and-security/.*$" "/static/404";
+"~^/doc/r.*/1987-rossi$" "/doc/sociology/1987-rossi";
+"~^/doc/psychology/PQ.*$" "/doc/psychology/index";
+"~^/doc/psychology/personality/conscientiousness/1991-barrick.pdfD.*$" "/doc/psychology/personality/conscientiousness/1991-barrick.pdf";
+"~^/doc/modafinil/2004-makris.pd%5Cf$" "";
+"~^/doc/economics/1980-arrow.pdf\|journal.*$" "/doc/economics/1980-arrow.pdf";
+"~^/doc/darknet-market/2012-01-18-tony76reviews$" "/doc/darknet-market/2012-01-18-tony76reviews.maff";
+"~^/doc/cat/valerian/$" "/doc/cat/psychology/drug/valerian/index";
+"~^/doc/ai/agi/2008-oring-agiproposal\.pdf.*$" "/doc/ai/2008-omohundro.pdf";
+"~^/changelogsub.*$" "/changelog";
+"~^/Bacopa.*$" "/bacopa";
+"~^/abortion-dialogue\?.*$" "/abortion-dialogue";
+"~^/ab-testing.md$" "/ab-test.md";
+"~^/all$" "/index";
+"~^/Comple$" "/complement";
+"~^/Seeing$" "/unseeing";
+"~^/design-raveyard$" "/design-graveyard";
+"~^/doc/bitcoin/1986ijiri\.pdf.*$" "/doc/bitcoin/1986-ijiri.pdf";
+"~^/doc/cat/catnip/$" "/doc/cat/psychology/drug/catnip/index";
+"~^/doc/cat/silvervine/index$" "/doc/cat/silvervine/index";
+"~^/doc/csulvunj/2005-09-30-smith-whyihateframeworks.html$" "/doc/cs/2005-09-30-smith-whyihateframeworks.html";
+"~^/doc/b9d5v1/2005-09-30-smith-whyihateframeworks.html$" "/doc/cs/2005-09-30-smith-whyihateframeworks.html";
+"~^/doc/lsd$" "/doc/psychedelic/index";
+"~^/doc/genetics/heritable/%EF%BF%BD$" "/doc/genetics/heritable/";
+"~^/doc/t$" "/doc/index";
+"~^/doc/-melatonin/2005-brzezinski.pd\f$" "/doc/melatonin/2005-brzezinski.pdf";
+"~^/doc/nootropic/quantified-self/2019-1$" "/doc/nootropic/quantified-self/2014-08-03-lllt-correlation.csv";
+"~^/doc/nootropic/quantified-self/2014-08-08-748$" "/doc/nootropic/quantified-self/2014-08-08-lllt-correlation-factoranalysis.csv";
+"~^/doc/reinforcement-learning/reinforcement-learning/2020-real-googlebrain-automlzero-populationperformanceevolution.mp4$" "/doc/reinforcement-learning/2020-real-googlebrain-automlzero-populationperformanceevolution.mp4";
+"~^/doc/statistics/meta-analysis/2004-hunterschmidt$" "/doc/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis.pdf";
+"~^/GPT-3&nbsp.*$" "/gpt-3";
+"~^/archiving-github$" "/haskell/archiving-github";
+"~^/holy-wars.md$" "/holy-war.md";
+"~^/indexx$" "/index";
+"~^/Littlewood/$" "/littlewood";
+"~^/static/metadata/~%5E/metadata/auto.gtx$" "/metadata/auto.gtx";
+"~^/newsletter/2012/$" "/newsletter/2013/index";
+"~^/ind$" "/index";
+"~^/note/fc.md$" "/note/fully-connected.md";
+"~^/static/font/dropcap/ninit/light/C-abstract-9.svg$" "/static/font/dropcap/ninit/light/C-abstract-light-9.svg";
+"~^/static/font/dropcap/ninit/light/C-abstract-5.svg$" "/static/font/dropcap/ninit/light/C-abstract-light-5.svg";
+"~^/static/font/NotoEmoji-Light.ttf$" "/static/font/noto-emoji/NotoEmoji-Light.ttf";
+"~^/static/favicon.ico$" "/static/img/favicon.ico";
+"~^/unseen$" "/unseeing";
+"~^/doc/culture/2009-zomerdijk\.pdf.*$" "/doc/culture/index";
+"~^/doc/statistics/decision/2006-drescher-goodandreal.pdf%5C.*$" "/doc/statistics/decision/2006-drescher-goodandreal.pdf";
+"~^/doc/reinforcement-learning/model/2021-mirhoseini.pdf%5C.*$" "/doc/reinforcement-learning/model/2021-mirhoseini.pdf";
+"~^/doc/sociology/1972-may$" "/doc/sociology/1972-may.pdf";
+"~^/doc/psychology/2019-letexier.pd%5Cf.*$" "/doc/psychology/2019-letexier.pdf";
+"~^/doc/genetics/heritable/1960-fuller$" "/doc/genetics/heritable/1960-fuller-behaviorgenetics.pdf";
+"~^/doc/darknet-market/agora/2015-02-22-6.*$" "/doc/darknet-market/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/TPB-Bitcoin-.*$" "/tpb-bitcoin";
+"~^/static/include/inlined-foot-extra.html$" "/static/include/inlined-standalone.html";
+"~^/static/img/icon/message-slash-light.svg$" "/static/img/icon/message-slash-solid.svg";
+"~^/static/font/dropcap/ninit/light/C-11-floral.png$" "/static/font/dropcap/ninit/light/index";
+"~^/static/font/dropcap/ninit/dark/C-scifi-9.png$" "/static/font/dropcap/ninit/dark/C-scifi-dark-9.png";
+"~^/static/font/dropcap/dropcat/light/C-3-small-2x.png$" "/static/font/dropcap/dropcat/light/C-light-3-small-1x.png";
+"~^/static/font/dropcap/dropcat/light/B-3-small-2x.png$" "/static/font/dropcap/dropcat/light/B-light-3-small-2x.png";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
