--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11278,3 +11278,19 @@ default "";
 "~^/doc/psychology/collecting/2019-08-22-kevinlynagh-pricingnichproducts.html.*$" "/doc/psychology/collecting/2019-08-22-kevinlynagh-pricingnicheproducts.html";
 "~^/doc/cs/zend-manual-pdfmetadata.html.*$" "/doc/cs/2020-02-16-zend-manual-pdfmetadata.html";
 "~^/static/build/[Aa]rrow\.hs.*$" "https://github.com/gwern/gwern.net/commit/28822b77f589c0b7cc9a68e8644a98c0e72ab56d";
+"~^/doc/darknet-market/2012-01-18-tony76reviews.maff.*$" "/doc/darknet-market/silk-road/1/2012-01-18-tony76reviews.maff";
+"~^/doc/economics/1980-arrow.pdf.*$" "/doc/philosophy/frank-ramsey/1980-arrow.pdf";
+"~^/doc/cs/css/2023-11-08-gwern-gwernnet-essaypopin-catitecture-withanxiousblackcatatwindowsillthumbnail.png.*$" "/doc/cs/css/2023-11-08-gwern-gwernnet-essaypopover-catitecture-withanxiousblackcatatwindowsillthumbnail.png";
+"~^/doc/nootropic/gwern-lsd-awakenings.png.*$" "/doc/nootropic/lsd/gwern-awakenings.png";
+"~^/doc/nootropic/gwern-lsd-creativity.png.*$" "/doc/nootropic/lsd/gwern-creativity.png";
+"~^/doc/nootropic/gwern-lsd-laggeddose.png.*$" "/doc/nootropic/lsd/gwern-laggeddose.png";
+"~^/doc/nootropic/gwern-lsd-mnemosyne.png.*$" "/doc/nootropic/lsd/gwern-mnemosyne.png";
+"~^/doc/nootropic/gwern-lsd-morningfeel.png.*$" "/doc/nootropic/lsd/gwern-morningfeel.png";
+"~^/doc/nootropic/gwern-lsd-mp.png.*$" "/doc/nootropic/lsd/gwern-mp.png";
+"~^/doc/nootropic/gwern-lsd-timeinwake.png.*$" "/doc/nootropic/lsd/gwern-timeinwake.png";
+"~^/doc/nootropic/gwern-lsd-timetoz.png.*$" "/doc/nootropic/lsd/gwern-timetoz.png";
+"~^/doc/nootropic/gwern-lsd-totalz.png.*$" "/doc/nootropic/lsd/gwern-totalz.png";
+"~^/doc/nootropic/2021-szigeti-figure4-placebovshalfmicrodosingvsfullmicrodosing-wellbeingmindfulnesslifesatisifactionparanoiacognition.jpg.*$" "/doc/nootropic/lsd/2021-szigeti-figure4-placebovshalfmicrodosingvsfullmicrodosing-wellbeingmindfulnesslifesatisifactionparanoiacognition.jpg";
+"~^/doc/psychedelic/1955-abramson.pdf.*$" "/doc/psychedelic/lsd/1955-abramson.pdf";
+"~^/doc/psychedelic/1969-siegel.pdf.*$" "/doc/psychedelic/lsd/1969-siegel.pdf";
+"~^/doc/psychedelic/2022-dewit.pdf.*$" "/doc/psychedelic/lsd/2022-dewit.pdf";
