--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11294,3 +11294,8 @@ default "";
 "~^/doc/psychedelic/1955-abramson.pdf.*$" "/doc/psychedelic/lsd/1955-abramson.pdf";
 "~^/doc/psychedelic/1969-siegel.pdf.*$" "/doc/psychedelic/lsd/1969-siegel.pdf";
 "~^/doc/psychedelic/2022-dewit.pdf.*$" "/doc/psychedelic/lsd/2022-dewit.pdf";
+"~^/doc/ai/nn/2006-hinton.pdf.*$" "/doc/ai/nn/vae/2006-hinton.pdf";
+"~^/doc/touhou/2013-06-08-acircle-tohoarrange.mdb.*$" "/doc/touhou/2013-06-08-acircle-tohoarrange.mdb.xz";
+"~^/doc/ai/1991-thrun.pdf.*$" "/doc/ai/tabular/1991-thrun.pdf";
+"~^/doc/ai/2012-rintanen.pdf.*$" "/doc/ai/tabular/2012-rintanen.pdf";
+"~^/doc/ai/2020-devlin.pdf.*$" "/doc/ai/nn/2020-devlin.pdf";
