naming: all Gtx -> GTX (case inconsistency kept causing typos)

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11299,3 +11299,4 @@ default "";
 "~^/doc/ai/1991-thrun.pdf.*$" "/doc/ai/tabular/1991-thrun.pdf";
 "~^/doc/ai/2012-rintanen.pdf.*$" "/doc/ai/tabular/2012-rintanen.pdf";
 "~^/doc/ai/2020-devlin.pdf.*$" "/doc/ai/nn/2020-devlin.pdf";
+"~^/static/build/Gtx.hs.*$" "/static/build/GTX.hs";
