--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11300,3 +11300,14 @@ default "";
 "~^/doc/ai/2012-rintanen.pdf.*$" "/doc/ai/tabular/2012-rintanen.pdf";
 "~^/doc/ai/2020-devlin.pdf.*$" "/doc/ai/nn/2020-devlin.pdf";
 "~^/static/build/Gtx.hs.*$" "/static/build/GTX.hs";
+"~^/doc/cs/2019-gwern-internetarchive-domainsearch-screenshot.png.*$" "/doc/cs/linkrot/archiving/2019-gwern-internetarchive-domainsearch-screenshot.png";
+"~^/doc/cs/1987-moon.pdf.*$" "/doc/cs/lisp/1987-moon.pdf";
+"~^/doc/cs/1994-binstock-lucidlost.pdf.*$" "/doc/cs/lisp/1994-binstock-lucidlost.pdf";
+"~^/doc/cs/2003-ross.pdf.*$" "/doc/cs/hardware/2003-ross.pdf";
+"~^/doc/technology/2005-04-shirky-ontologyisoverratedcategorieslinksandtags.html.*$" "/doc/philosophy/ontology/2005-04-shirky-ontologyisoverratedcategorieslinksandtags.html";
+"~^/doc/cs/2012-terencetao-anonymity.html.*$" "/doc/cs/security/2012-terencetao-anonymity.html";
+"~^/doc/cs/1988-borenstein.pdf.*$" "/doc/cs/lisp/1988-borenstein.pdf";
+"~^/doc/cs/1986-bobrow.pdf.*$" "/doc/cs/lisp/1986-bobrow.pdf";
+"~^/doc/ai/nn/transformer/gpt/whisper/2022-randford-figure6-whisperbenchmarksagainstrivalsacrossotherdatasets.png.*$" "/doc/ai/nn/transformer/gpt/whisper/2022-radford-figure6-whisperbenchmarksagainstrivalsacrossotherdatasets.png";
+"~^/doc/psychiatry/2011-hansen.pdf.*$" "/doc/psychiatry/depression/2011-hansen.pdf";
+"~^/doc/psychiatry/2011-hansen-figure3-stabilityofhighschoolsuicideeffectovertime.jpg.*$" "/doc/psychiatry/depression/2011-hansen-figure3-stabilityofhighschoolsuicideeffectovertime.jpg";
