--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11311,3 +11311,11 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/whisper/2022-randford-figure6-whisperbenchmarksagainstrivalsacrossotherdatasets.png.*$" "/doc/ai/nn/transformer/gpt/whisper/2022-radford-figure6-whisperbenchmarksagainstrivalsacrossotherdatasets.png";
 "~^/doc/psychiatry/2011-hansen.pdf.*$" "/doc/psychiatry/depression/2011-hansen.pdf";
 "~^/doc/psychiatry/2011-hansen-figure3-stabilityofhighschoolsuicideeffectovertime.jpg.*$" "/doc/psychiatry/depression/2011-hansen-figure3-stabilityofhighschoolsuicideeffectovertime.jpg";
+"~^/doc/ai/nn/transformer/gpt/2024-03-07-inflection-inflection25benchmarks.svg.*$" "/doc/ai/nn/transformer/gpt/codex/2024-03-07-inflection-inflection25benchmarks.svg";
+"~^/doc/cs/2006-jared-wikimediaprovesgreenspunstenthlaw.html.*$" "/doc/cs/algorithm/2006-jared-wikimediaprovesgreenspunstenthlaw.html";
+"~^/doc/psychedelic/2022-cao.pdf.*$" "/doc/psychedelic/lsd/2022-cao.pdf";
+"~^/doc/psychedelic/2020-olson-2.pdf.*$" "/doc/psychedelic/lsd/2020-olson-2.pdf";
+"~^/doc/psychedelic/2020-haden.pdf.*$" "/doc/psychedelic/lsd/2020-haden.pdf";
+"~^/doc/psychedelic/1999-aghajanian.pdf.*$" "/doc/psychedelic/lsd/1999-aghajanian.pdf";
+"~^/doc/psychedelic/1984-siegel-2.pdf.*$" "/doc/psychedelic/lsd/1984-siegel-2.pdf";
+"~^/doc/bitcoin/2012-gwern-frontpage.png.*$" "/doc/darknet-market/silk-road/1/2012-gwern-frontpage.png";
