--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11319,3 +11319,7 @@ default "";
 "~^/doc/psychedelic/1999-aghajanian.pdf.*$" "/doc/psychedelic/lsd/1999-aghajanian.pdf";
 "~^/doc/psychedelic/1984-siegel-2.pdf.*$" "/doc/psychedelic/lsd/1984-siegel-2.pdf";
 "~^/doc/bitcoin/2012-gwern-frontpage.png.*$" "/doc/darknet-market/silk-road/1/2012-gwern-frontpage.png";
+"~^/doc/psychology/1990-murphy.pdf.*$" "/1990-murphy.pdf";
+"~^/doc/psychiatry/2005-haber.pdf.*$" "/doc/psychiatry/alcoholism/2005-haber.pdf";
+"~^/doc/psychiatry/2015-steffen.pdf.*$" "/doc/psychiatry/alcoholism/2015-steffen.pdf";
+"~^/1990-murphy.pdf.*$" "/doc/psychiatry/alcoholism/1990-murphy.pdf";
