--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16329,6 +16329,9 @@
 "~^/static/font/dropcap/ninit/dark/C-scifi-9.png$" "/static/font/dropcap/ninit/dark/C-scifi-dark-9.png";
 "~^/static/font/dropcap/dropcat/light/C-3-small-2x.png$" "/static/font/dropcap/dropcat/light/C-light-3-small-1x.png";
 "~^/static/font/dropcap/dropcat/light/B-3-small-2x.png$" "/static/font/dropcap/dropcat/light/B-light-3-small-2x.png";
+"~^/[Tt]imecrime.*$" "/review/timecrimes";
+"~^/review/[Tt]imecrime$" "/review/timecrimes";
+"~^/review/Timecrime.*$" "/review/timecrimes";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
