--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11323,3 +11323,4 @@ default "";
 "~^/doc/psychiatry/2005-haber.pdf.*$" "/doc/psychiatry/alcoholism/2005-haber.pdf";
 "~^/doc/psychiatry/2015-steffen.pdf.*$" "/doc/psychiatry/alcoholism/2015-steffen.pdf";
 "~^/1990-murphy.pdf.*$" "/doc/psychiatry/alcoholism/1990-murphy.pdf";
+"~^/doc/cs/c/gwern-problem14-49randomgamesinr.png.*$" "/doc/cs/r/gwern-problem14-49randomgamesinr.png";
