--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16332,6 +16332,76 @@
 "~^/[Tt]imecrime.*$" "/review/timecrimes";
 "~^/review/[Tt]imecrime$" "/review/timecrimes";
 "~^/review/Timecrime.*$" "/review/timecrimes";
+"~^/doc/statistics/bayes/2008-kesselamn\.pdf.*$" "/doc/statistics/bayes/2008-kesselman.pdf";
+"~^/doc/iq/high/smpy/2004-frey.pdfsames.*$" "/doc/iq/high/smpy/2004-frey.pdf";
+"~^/doc/economics/advertising/%EF.*$" "/doc/economics/advertising/index";
+"~^/static/img/favicon.png%22%20.*$" "/static/img/favicon.png";
+"~^/static/font/SourceSansPro-BASIC-Italic.ttf$" "/static/font/ssp/SourceSansPro-BASIC-BlackItalic.ttf";
+"~^/Shift_work_sleep_disorder$" "https://en.wikipedia.org/wiki/Shift_work_sleep_disorder";
+"~^/newsletter/2024/December$" "/newsletter/2024/12";
+"~^/newsletter/2021/%EF%BF%BD$" "/newsletter/2021/index";
+"~^/Instagram$" "https://en.wikipedia.org/wiki/Instagram";
+"~^/doc/technology/2019-melendez-glider-gamingai\.pdf.*$" "/doc/technology/index";
+"~^/doc/statistics/decision/1990-pearson$" "/doc/statistics/decision/1990-pearson-studentastatisticalbiographyofwilliamsealygosset.pdf";
+"~^/doc/sr/2019-04-22-deepdotweb-silkroad4$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/rotten.com/religion/$" "/doc/rotten.com/religion/index.html";
+"~^/doc/rotten.com/library/medicine/ind$" "/doc/rotten.com/library/medicine/index.html";
+"~^/doc/psychiatry/1977-smiti\.pdf.*$" "/doc/psychology/1977-smith.pdf";
+"~^/doc/openai/index$" "/doc/reinforcement-learning/openai/index";
+"~^/doc/nicotine/2009-fro$" "/doc/nicotine/2009-froeliger.pdf";
+"~^/doc/lesswrong-survey/2013-07-22-%EF%BF%BD$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/doc/iq/high/smpy/2005-tour%EF%BF%BD$" "/doc/iq/high/smpy/2005-touron.pdf";
+"~^/doc/iq/1998-deneve.pdfC.*$" "/doc/iq/1998-deneve.pdf";
+"~^/doc/glp/psychology/index$" "/doc/longevity/glp/psychology/index";
+"~^/doc/darknet-market/2013-2X.*$" "/doc/darknet-market/";
+"~^/doc/cs/linkrot/2011-muax-backup\.pdf.*$" "/doc/cs/linkrot/archiving/2011-muflax-backup.pdf";
+"~^/doc/borges/1939-borges-theto$" "/doc/borges/1939-borges-thetotallibrary.pdf";
+"~^/doc/biology/ET.*$" "/doc/biology/index";
+"~^/doc/biology/about/jiapac_guidelines.html$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/doc/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-M8.*$" "/doc/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/doc/adversarial/human/index$" "/doc/ai/adversarial/human/index";
+"~^/Danbooru2020%E3%81.*$" "/dabooru2020";
+"~^/Category:Files_with_no_machine-readable_author$" "https://en.wikipedia.org/wiki/Category:Files_with_no_machine-readable_author";
+"~^/advocacy.html$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/2012-election-predictions/.*$" "/2012-election-predictions";
+"~^/Danbooru2010$" "/Danbooru2021#danbooru2020";
+"~^/DNB-FAQ.To$" "/dnb-faq";
+"~^/note/sparsity/$" "/doc/ai/nn/sparsity/index";
+"~^/doc/scaling/index$" "/doc/ai/scaling/index";
+"~^/doc/darknet-market/%C3%B0$" "/doc/darknet-market/index";
+"~^/doc/sr/2019-03-22-deepdotyweb-dnmlist.html$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/economics/1971-mcclellandtheachievingsociety\.pdf.*$" "/doc/economics/1971-mcclelland-theachievingsociety.pdf";
+"~^/doc/genetics/heritable/ES$" "/doc/genetics/heritable/index";
+"~^/doc/genetics/selection/www.mountimprobable.com/about/assets/images/spread_white.svg$" "/doc/genetics/selection/www.mountimprobable.com/assets/images/spread_white.svg";
+"~^/doc/longevity/Zeo$" "/doc/longevity/index";
+"~^/doc/nootropic/quantified-self/2014-08-1$" "/doc/nootropic/quantified-self/2014-08-03-lllt-correlation.csv";
+"~^/doc/personal/2012-1$" "/doc/personal/index";
+"~^/doc/psychology/writing/2018-1$" "/doc/psychology/writing/";
+"~^/2002-radiance$" "/doc/radiance/2002-scholz-radiance";
+"~^/doc/reinforcement-learning/armstrong-controlproblem/%C3%B0$" "/doc/reinforcement-learning/armstrong-controlproblem/index.html";
+"~^/fiction/Dinosaur-Comics/index.html$" "/fiction/dinosaur-comics";
+"~^/doc/technology/2018-07-162.*$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/drug-heuristics\?.*$" "/drug-heuristic";
+"~^/facrs$" "/face";
+"~^/GBT-3$" "/gpt-3";
+"~^/README.md$" "/index";
+"~^/Lorem&amp$" "/lorem";
+"~^/LSD-microdo$" "/lsd-microdosing";
+"~^/custom.yml$" "/metadata/full.gtx";
+"~^/Nicotene$" "/nicotine";
+"~^/note/Fashions$" "/note/fashion";
+"~^/note/lizardman/$" "/note/lizardman";
+"~^/problem-2$" "https://puzzles.nigelcoldwell.co.uk/two.htm";
+"~^/problem-1$" "https://puzzles.nigelcoldwell.co.uk/one.htm";
+"~^/problem-16$" "https://puzzles.nigelcoldwell.co.uk/sixteen.htm";
+"~^/problem-15$" "https://puzzles.nigelcoldwell.co.uk/fifteen.htm";
+"~^/problem-11$" "https://puzzles.nigelcoldwell.co.uk/eleven.htm";
+"~^/doc/writing.jpg$" "/psychology/writing/index";
+"~^/questions.md$" "/question.md";
+"~^/review/book/$" "/review/book";
+"~^/bookreviews$" "/review/book";
+"~^/Scaling-Hypothesis$" "/scaling-hypothesis";
+"~^/doc/www/www.baen.com/572e2ecdc772265468532c789a8f7d19febccea9.html/favicon.ico$" "https://www.baen.com/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
