--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11324,3 +11324,6 @@ default "";
 "~^/doc/psychiatry/2015-steffen.pdf.*$" "/doc/psychiatry/alcoholism/2015-steffen.pdf";
 "~^/1990-murphy.pdf.*$" "/doc/psychiatry/alcoholism/1990-murphy.pdf";
 "~^/doc/cs/c/gwern-problem14-49randomgamesinr.png.*$" "/doc/cs/r/gwern-problem14-49randomgamesinr.png";
+"~^/doc/science/2024-03-13-gwern-dalle3-quantumthief-omnisfmagazinecoverstyle-green-thumbnail.jpg.*$" "/doc/fiction/science-fiction/2024-03-13-gwern-dalle3-quantumthief-omnisfmagazinecoverstyle-green-thumbnail.jpg";
+"~^/doc/psychology/2014-oppezzo.pdf.*$" "/doc/psychology/novelty/2014-oppezzo.pdf";
+"~^/doc/design/typography/1981-knuth.pdf.*$" "/doc/design/typography/tex/1981-knuth.pdf";
